--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<ul class="icons">
 							<li><a href=https://x.com/femioladipo2 class="icon brands alt fa-twitter"><span class="label">twitter</span></a></li>
 							<li><a href=https://www.linkedin.com/in/babafemi-oladipo-20260163/ class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
-							<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href=https://github.com/OladipoBabz class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 					</nav>
 
 				<!-- Main -->
